<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="editTextBill">Bill</string>
    <string name="editTextBillDefault">0.0</string>
    <string name="editTextTip">Tip</string>
    <string name="editTextFinal">Total</string>
    <string name="tipDefault">0.15</string>
</resources>
